[project]
name = "iot-raspberry"
version = "0.1.0"
description = ""
authors = [
    {name = "JED",email = "789jed789@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speechrecognition (>=3.14.1,<4.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.78,<9.0.0)",
    "boto3 (>=1.36.26,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
